Fixed alignment

--- a/client/src/assets/style/sass/index.sass
+++ b/client/src/assets/style/sass/index.sass
@@ -1,7 +1,7 @@
-*
+@import "./fonts/fonts.sass"
+
+*, body
+    font-family: "Custom_Gelion"
     padding: 0
     margin: 0
-    
-body
-    padding: 0
-    margin: 0
+
